src/components/Notification/Notification.css
@import '../../constants/styles.css';

.notification {
  color: black;
  position: fixed;
  bottom: 30px;
  left: 50%;
  width: 100%;
  font-family: FFDINWebProLight, sans-serif;
  transform: translate3d(-50%, -150%, 0);
  height: auto;
  min-width: calc(100% - 1.5rem);
  transition: ease 0.05s;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  z-index: 100;
}

.notification.open  {
  animation: notificationSlideIn 0.4s;
}

.notification.close {
  animation: notificationSlideOut 0.4s ease-out normal forwards;
}

.notification.INFO {
  background-color: var(--grønn);
}

.notification.WARNING {
  background-color: var(--soloppgang);
}

.notification.ERROR {
  background-color: var(--solnedgang);
}

.notification .check {
  display: flex;
  align-items: center;
  padding-left: 5%;
}

.notification .content {
  margin-top: 0.8em;
  margin-bottom: 0.8em;
  padding-left: 2rem;
  width: 100%;
}

.notification .content .title {
  display: block;
  font-size: 1.2em;
  margin-block-start: 0.67em;
  margin-block-end: 0.57em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
  font-weight: bold;
}

.notification .content .message {
  display: block;
  margin-block-start: 0em;
  margin-block-end: 0em;
  margin-inline-start: 0px;
  margin-inline-end: 0px;
}

.notification .close button {
  cursor: pointer;
  background: var(--natt) !important;
  color: var(--hvit);
  border: none;
  padding: 0.8em;
  font: inherit;
}

@media (max-width: 25em) {
  .notification {
    flex-direction: column;
  }

  .notification .check {
    display: none;
  }
}

@keyframes notificationSlideIn {
  0% {
    transform: translate3d(-50%, 100%, 0);
  }

  50% {
    transform: translate3d(-50%, -10%, 0);
  }

  100% {
    transform: translate3d(-50%, 0%, 0);
  }
}

@keyframes notificationSlideOut {
  0% {
    transform: translate3d(-50%, 0%, 0);
  }

  20% {
    transform: translate3d(-50%, -10%, 0);
  }

  100% {
    transform: translate3d(-50%, 150%, 0);
  }
}

